# Reduct-cli

./: .gitignore  README.md  dump.md  pyproject.toml  readme.md  transcript.txt
backend/: edit_generator.py  main.py  next_steps.md  process_results.py  prompt.py  requirements.txt  twelve.py
cli/: Cargo.toml
cli/src/: main.rs
src/: .env.example  .gitignore  edit_generator.py  features.md  main.py  next_steps.md  process_results.py  prompt.py  pyproject.toml  requirements.txt  todo.md  transcription.py  twelve.py  vision.py
src/prompts/: clean_user_prompt.txt  generate_ffmpeg_command.txt  index_prompt.txt
src/utils/: analyze_video_frames.py  audio_extract.py  audio_index.py  search.py  video_index.py
