[project]
name = "src"
version = "0.1.0"
description = "Reduct backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "google-genai>=1.13.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "twelvelabs>=0.4.7",
    "uvicorn>=0.34.2",
]
